# placement-new

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/src/: array_init.rs  boxed_slice.rs  large_enum.rs  large_struct.rs  lib.rs  tagged_data.rs
placement-new/: Cargo.toml
placement-new-derive/: Cargo.toml
placement-new-derive/src/: lib.rs
placement-new/src/: __private.rs  alloc.rs  array.rs  guard.rs  lib.rs  place.rs  slice.rs  uninit.rs
placement-new/tests/: large_struct.rs  tagged_data.rs
