[package]
name = "placement-new-derive"
version = "0.3.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "Common utilities to implement \"placement-new\""
license = "MIT"
repository = "https://github.com/Nugine/placement-new"
readme = "../README.md"
keywords = ["placement-new", "memory-management", "no-std"]
categories = ["memory-management", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
