[package]
name = "placement-new"
version = "0.2.1"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "Common utilities to implement \"placement-new\""
license = "MIT"
repository = "https://github.com/Nugine/placement-new"
readme = "../README.md"
keywords = ["placement-new", "memory-management", "no-std"]
categories = ["memory-management", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc", "derive"]

alloc = []
derive = ["placement-new-derive"]

[dependencies.placement-new-derive]
version = "=0.2.1"
optional = true
# path = "../placement-new-derive"
